--- a/index.html
+++ b/index.html
@@ -3,27 +3,17 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>114</title>
+        <title>115</title>
 
         <script>
-            var name = prompt("What is your name?");
-            var age = prompt("What is your age?");
-            var msg;
+            var age = prompt("How old are you?");
 
-            if ( name == "Samuel" ) {
-                msg = "Hey Sam!";
-            } else if ( name == "Ann" ) {
-                msg = "Hey Ann!";
+            if ( age < 18 ) {
+                alert("Sorry, you are too young to drive this car. Powering off");
+            } else if ( age == 18 ) {
+                alert("Congratulations on your first year of driving. Enjoy the ride!");
             } else {
-                msg = "Who are you?";
-            }
-
-            if ( age > 18 || age < 50 ) {
-                msg = "You are an adult";
-            } else if ( name == "Adam" && age == 18 ) {
-                msg = "Happy 18th birthday Adam!";
-            } else if ( age != 10 ) {
-                msg = "You definitely aren't 10 years old"
+                alert("Powering On. Enjoy the ride!");
             }
         </script>
     </head>
