--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>116</title>
+        <title>115</title>
 
-        <script type="text/javascript" src="script.js"></script>
+        <script>
+            var age = prompt("How old are you?");
+
+            if ( age < 18 ) {
+                alert("Sorry, you are too young to drive this car. Powering off");
+            } else if ( age == 18 ) {
+                alert("Congratulations on your first year of driving. Enjoy the ride!");
+            } else {
+                alert("Powering On. Enjoy the ride!");
+            }
+        </script>
     </head>
     <body>
         
